# dundie-rewards

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  conftest.py  passwords_txt.txt  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  setup.py  test-result.xml
.github/workflows/: main.yml
assets/: database.db  database.json  database.test.json  people.csv
docs/: how_to_install.md  how_to_use.md  index.md  roadmap.md
dundie/: VERSION.txt  __main__.py  cli.py  core.py  database.py  models.py  settings.py
dundie/utils/: auth.py  db.py  decorator.py  email.py  exchange.py  log.py  passwords.py  user.py
integration/: conftest.py  test_load.py
migrations/versions/: 5e4b6d1c0543_initial.py  82f4833b2146_added_currency_field_in_table_person.py
tests/: conftest.py  test_add.py  test_database.py  test_load.py  test_models.py  test_read.py  test_utils.py
tests/assets/: people.csv
